Use JDK 17.